@@ -30,7 +30,7 @@ public class ConsoleOutput implements GameOutput {
             // Prepare the taunt status string with a leading space if it exists
             String tauntStatus = hero.isTaunting() ? " (Provocation)" : "";
 
-            System.out.printf("  %s%s (Ур.%d) Позиция: %s, HP: %d/%d, Урон: %d, Дальность: %d, Скорость: %d%n",
+            System.out.printf("  %s%s (Lvl.%d) Position: %s, HP: %d/%d, Damage: %d, Range: %d, Speed: %d%n",
                     hero.getName(),
                     tauntStatus,
                     hero.getLevel(),
@@ -38,9 +38,9 @@ public class ConsoleOutput implements GameOutput {
                     hero.getDamage(), hero.getRange(), hero.getSpeed());
         });
 
-        System.out.println("\n--- Состояние Врагов ---");
+        System.out.println("\n--- The State of Enemies ---");
         enemies.stream().filter(Unit::isAlive).forEach(enemy ->
-                System.out.printf("%s (%s) (Ур.%d) Позиция: %s, HP: %d/%d, Урон: %d, Дальность: %d, Скорость: %d%n",
+                System.out.printf("%s (%s) (Lvl.%d) Position: %s, HP: %d/%d, Damage: %d, Range: %d, Speed: %d%n",
                         enemy.getName(), enemy.getClass().getSimpleName(), enemy.getLevel(), enemy.getPosition().toString(),
                         enemy.getHealth(), enemy.getMaxHealth(), enemy.getDamage(),
                         enemy.getRange(), enemy.getSpeed())
@@ -50,23 +50,23 @@ public class ConsoleOutput implements GameOutput {
 
     @Override
     public void displayShop(int gold, List<Hero> heroes) {
-        System.out.println("\n===== МАГАЗИН =====");
-        System.out.println("Ваше золото: " + gold);
-        System.out.println("Доступные апгрейды (стоимость):");
-        System.out.println("1. Увеличить HP героя на 20 (20 золота)");
-        System.out.println("2. Увеличить Урон героя на 5 (15 золота)");
-        System.out.println("3. Увеличить Скорость героя на 1 (25 золота)");
-        System.out.println("4. Увеличить Дальность героя на 1 (20 золота)");
-        System.out.println("5. Выход из магазина");
+        System.out.println("\n===== SHOP =====");
+        System.out.println("Your Gold: " + gold);
+        System.out.println("Available upgrades (cost):");
+        System.out.println("1. Increase HP of the hero by 20 (20 golds)");
+        System.out.println("2. Increase Damage of the hero by 5 (15 golds)");
+        System.out.println("3. Increase Speed of the hero by 1 (25 golds)");
+        System.out.println("4. Increase Range of the hero by 1 (20 golds)");
+        System.out.println("5. Exit the shop");
 
-        System.out.println("Выберите героя для апгрейда:");
-        List<Hero> aliveHeroes = heroes.stream().filter(Hero::isAlive).collect(java.util.stream.Collectors.toList());
+        System.out.println("Select a hero to upgrade:");
+        List<Hero> aliveHeroes = heroes.stream().filter(Hero::isAlive).toList();
         if (aliveHeroes.isEmpty()) {
-            System.out.println("Нет живых героев для апгрейда.");
+            System.out.println("No heroes available for upgrade.");
         } else {
             for (int i = 0; i < aliveHeroes.size(); i++) {
                 Hero h = aliveHeroes.get(i);
-                System.out.printf("%d: %s (Ур.%d) HP: %d/%d, Урон: %d, Дальность: %d, Скорость: %d%n",
+                System.out.printf("%d: %s (Lvl.%d) HP: %d/%d, Damage: %d, Range: %d, Speed: %d%n",
                         i, h.getName(), h.getLevel(), h.getHealth(), h.getMaxHealth(), h.getDamage(), h.getRange(), h.getSpeed());
             }
         }
@@ -74,14 +74,14 @@ public class ConsoleOutput implements GameOutput {
 
     @Override
     public void displayAvailableTargets(List<? extends Unit> targets, Unit attacker) {
-        System.out.println("Доступные цели для " + attacker.getName() + ":");
+        System.out.println("Available targets for " + attacker.getName() + ":");
         if (targets.isEmpty()) {
-            System.out.println("Нет целей в зоне досягаемости.");
+            System.out.println("No targets within range.");
             return;
         }
         for (int i = 0; i < targets.size(); i++) {
             Unit u = targets.get(i);
-            System.out.printf("%d: %s на %s (HP: %d/%d) Урон: %d%n",
+            System.out.printf("%d: %s by %s (HP: %d/%d) Damage: %d%n",
                     i, u.getName(), u.getPosition().toString(), u.getHealth(), u.getMaxHealth(), u.getDamage());
         }
     }
